k8s/templates/istio-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: opentelemetry-example
  namespace: opentelemetry-example
spec:
  host: weather-service
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
    loadBalancer:
      simple: ROUND_ROBIN
    connectionPool:
      tcp:
        maxConnections: 500
      http:
        http2MaxRequests: 10000
        maxRequestsPerConnection: 10
        idleTimeout: 30s
      outlierDetection:
        consecutiveErrors: 5
        interval: 30s
        baseEjectionTime: 60s
        maxEjectionPercent: 30
